--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "face",
+  "homepage": "https://ratwoods.github.io/face",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -19,6 +20,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
   },
   "eslintConfig": {
     "extends": [
